feat: add endpoint summary
