# internal/kategori/api.go
@@ -1,6 +1,7 @@
 package kategori
 
 import (
+	"net/http"
 	"sireg/rest-api-kegiatan/internal/request"
 	"sireg/rest-api-kegiatan/internal/response"
 
@@ -34,7 +35,7 @@ type resource struct {
 func (r resource) GetAll(c *gin.Context) {
 	kategoris, err := r.s.GetAll(c)
 	if err != nil {
-		c.JSON(500, gin.H{
+		c.JSON(http.StatusInternalServerError, gin.H{
 			"message": err.Error(),
 		})
 	}
@@ -42,7 +43,7 @@ func (r resource) GetAll(c *gin.Context) {
 		Message: "success",
 		Data:    kategoris,
 	}
-	c.JSON(200, res)
+	c.JSON(http.StatusOK, res)
 }
 
 // Get kategori godoc
@@ -63,9 +64,10 @@ func (r resource) Get(c *gin.Context) {
 
 	kategori, err := r.s.Get(c, kategoriId.KategoriId)
 	if err != nil {
-		c.JSON(500, gin.H{
+		c.JSON(http.StatusInternalServerError, gin.H{
 			"message": err.Error(),
 		})
+		return
 	}
 
 	res := response.SuccessResponse{
@@ -73,7 +75,7 @@ func (r resource) Get(c *gin.Context) {
 		Data:    kategori,
 	}
 
-	c.JSON(200, res)
+	c.JSON(http.StatusOK, res)
 }
 
 // Create kategori godoc
@@ -89,14 +91,16 @@ func (r resource) Create(c *gin.Context) {
 	var request request.ReqKategori
 	if err := c.MustBindWith(&request, binding.JSON); err != nil {
 		// this should cancel the context because BindWith
+		c.JSON(http.StatusBadRequest, gin.H{"message": "400 bad request"})
 		return
 	}
 
 	kategori, err := r.s.Create(c, &request)
 	if err != nil {
-		c.JSON(500, gin.H{
+		c.JSON(http.StatusInternalServerError, gin.H{
 			"message": err.Error(),
 		})
+		return
 	}
 
 	res := response.SuccessResponse{
@@ -104,7 +108,7 @@ func (r resource) Create(c *gin.Context) {
 		Data:    kategori,
 	}
 
-	c.JSON(200, res)
+	c.JSON(http.StatusOK, res)
 }
 
 // Update kategori godoc
@@ -115,12 +119,13 @@ func (r resource) Create(c *gin.Context) {
 // @Produce json
 // @Param request body request.ReqKategori true "create new kategori"
 // @Param kategoriId path int true "id kategori"
-// @Success 200 {object} response.SuccessResponse{data=response.Kategori}
+// @Success 200 {object} response.SuccessResponse
 // @Router /kategori/{kategoriId} [patch]
 func (r resource) Update(c *gin.Context) {
 	var reqBody request.ReqKategori
 	if err := c.MustBindWith(&reqBody, binding.JSON); err != nil {
 		// this should cancel the context because BindWith
+		c.JSON(http.StatusBadRequest, gin.H{"message": "400 bad request"})
 		return
 	}
 
@@ -129,19 +134,19 @@ func (r resource) Update(c *gin.Context) {
 		return
 	}
 
-	kategori, err := r.s.Update(c, &reqBody, kategoriId.KategoriId)
+	err := r.s.Update(c, &reqBody, kategoriId.KategoriId)
 	if err != nil {
-		c.JSON(500, gin.H{
+		c.JSON(http.StatusInternalServerError, gin.H{
 			"message": err.Error(),
 		})
+		return
 	}
 
 	res := response.SuccessResponse{
 		Message: "success",
-		Data:    kategori,
 	}
 
-	c.JSON(200, res)
+	c.JSON(http.StatusOK, res)
 }
 
 // Delete kategori godoc
@@ -161,14 +166,15 @@ func (r resource) Delete(c *gin.Context) {
 
 	err := r.s.Delete(c, kategoriId.KategoriId)
 	if err != nil {
-		c.JSON(500, gin.H{
+		c.JSON(http.StatusInternalServerError, gin.H{
 			"message": err.Error(),
 		})
+		return
 	}
 
 	res := response.SuccessResponse{
 		Message: "success",
 	}
 
-	c.JSON(200, res)
+	c.JSON(http.StatusOK, res)
 }
